dev/frontend.yaml
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
# Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: devops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: dahhouilyas/frontend_ci:V-c80a
        ports:
        - containerPort: 80
          name: http-port
